<resources>
    <string name="app_name">Hello</string>
    <string name="tittle">PRAKTIKUM MDP MODUL ANDROID</string>
    <string name="regtittle">REGISTRASI DATA</string>
    <string name="user">username</string>
    <string name="password">password</string>
    <string name="login">masuk</string>
    <string name="register">register</string>
    <string name="logout">Logout</string>
    <string name="Header">Selamat datang Di Praktikum MDP 2018</string>
    <string name="name">Nama Kamu</string>
    <string name="description">Selanjutnya akan di jelaskan di modul android berikutnya Mengenai API dan MVP</string>
    <string name="logo1">LOGO</string>
    <string name="aplikasi_ini_dibuat_untuk_memenuhi_tugas_modul_2_praktikum_mdp">Aplikasi ini dibuat untuk memenuhi tugas Modul 2 Praktikum MDP</string>
    <string name="dibuat_oleh">Dibuat Oleh:</string>
    <string name="hasyim_dahlan_attaufiqi_21120116120013">Hasyim Dahlan Attaufiqi (21120116120013)</string>
    <string name="amara_ranindhita_21120116120016">Amara Ranindhita (21120116120016)</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="logo2">LOGO</string>
    <string name="let_s_start_new_live">let\'s start new live</string>
    <string name="selamat_datang_di_tugas_modul_2_mdp_kelompok_15">Selamat Datang di Tugas Modul 2 MDP Kelompok 15</string>
    <string name="hidup_dibawa_santai_aja">Hidup dibawa santai aja ;)</string>
    <string name="email">Email</string>
    <string name="about">About</string>
    <string name="manage_account">Manage Account</string>
    <string name="todo">TODO</string>
    <string name="logo3">LOGO</string>
    <string name="manage_">MANAGE ACCOUNT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="logo4">LOGO</string>
    <string name="logo5">LOGO</string>
    <string name="todo3">TODO</string>
    <string name="todo2">TODO</string>
</resources>
