<?xml version="1.0" encoding="utf-8"?>
<com.gc.materialdesign.views.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"

    tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="30dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="265dp"
            android:layout_height="184dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/logo5"
            android:src="@drawable/logolab"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.769" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/let_s_start_new_live"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etUsernameLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etUsernameLogin"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etPasswdLogin"
            app:layout_constraintEnd_toEndOf="@+id/etPasswdLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etPasswdLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints"
            android:autofillHints="" tools:targetApi="o"/>

        <EditText
            android:id="@+id/etPasswdLogin"
            android:layout_width="319dp"
            android:layout_height="49dp"
            android:layout_marginTop="308dp"
            android:hint="@string/password"
            android:imeActionId="6"
            android:imeActionLabel="Sign In"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/btnSignInLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnSignInLogin"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:autofillHints="" tools:targetApi="o"/>


        <Button
            android:id="@+id/btnSignUpLogin"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="428dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/btnSignInLogin"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUpLogin"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUpLogin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btnSignUpLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />


    </android.support.constraint.ConstraintLayout>
</com.gc.materialdesign.views.ScrollView>